Kotlin gradle oppdatert, readme oppdatert